--- a/todo-react-project/src/App.css
+++ b/todo-react-project/src/App.css
@@ -62,3 +62,15 @@ button {
   border-radius: 20px;
   padding: 4px;
 }
+
+.todoTable {
+  display: flex;
+  flex-direction: column;
+  width: 50%
+}
+
+.todoItem div {
+  border: 1px solid white;
+  width: 100%;
+  align-content: center;
+}
